[gd_scene load_steps=4 format=3 uid="uid://c22swbwbu232w"]

[ext_resource type="Theme" uid="uid://cdig0arxkwqjx" path="res://themes/menu.tres" id="1_asob6"]
[ext_resource type="Script" uid="uid://bcxswsnualbh8" path="res://gui/pause_menu.gd" id="1_q2gd7"]

[sub_resource type="LabelSettings" id="LabelSettings_2yghs"]
font_size = 34

[node name="PlayerGui" type="CanvasLayer"]

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_asob6")
script = ExtResource("1_q2gd7")

[node name="Background" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.258824)

[node name="Label" type="Label" parent="PauseMenu"]
layout_mode = 0
offset_left = 43.0
offset_top = 245.0
offset_right = 269.0
offset_bottom = 292.0
text = "Game paused"
label_settings = SubResource("LabelSettings_2yghs")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 0
offset_left = 42.0
offset_top = 332.0
offset_right = 245.0
offset_bottom = 494.0
theme_override_constants/separation = 10

[node name="Resume" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Settings" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ToMenu" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Exit to menu"

[connection signal="pressed" from="PauseMenu/VBoxContainer/Resume" to="PauseMenu" method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Settings" to="PauseMenu" method="_on_settings_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ToMenu" to="PauseMenu" method="_on_to_menu_pressed"]
